Arreglo de reportes

--- a/api-gestion-cine/pom.xml
+++ b/api-gestion-cine/pom.xml
@@ -53,6 +53,13 @@
             <version>${restapi}</version>
         </dependency>
 
+         <!-- multipart files -->
+        <dependency>
+            <groupId>org.glassfish.jersey.media</groupId>
+            <artifactId>jersey-media-multipart</artifactId>
+            <version>${restapi}</version>
+        </dependency>
+
         <!-- Librerías adicionales -->
         <dependency>
             <groupId>org.apache.commons</groupId>
