--- a/api-gestion-cine/pom.xml
+++ b/api-gestion-cine/pom.xml
@@ -86,7 +86,15 @@
             <artifactId>jasperreports-functions</artifactId>
             <version>7.0.3</version>
         </dependency>
+        
+        <dependency>
+            <groupId>net.sf.jasperreports</groupId>
+             <artifactId>jasperreports-pdf</artifactId>
+            <version>7.0.3</version>
+        </dependency>
     </dependencies>
+   
+
 
     <build>
         <plugins>
